2003-04-22  Morten Welinder  <terra@gnome.org>

	* src/formats.c (currency_date_format_init): Improve error
	messages.

2003-04-22  Jody Goldberg <jody@gnome.org>

	* doc/xmldocs.make : install docs where libgnome expects them
	  now something actually happens, although it is dog slow.

2003-04-21  Jody Goldberg <jody@gnome.org>

	* src/mstyle.c (mstyle_hash) : adjust to allow styles from different
	  sheets to hash the same despite auto colours that have different
	  instances.
	(mstyle_element_equal) : ditto.

	* src/sheet.c (sheet_destroy) : free the names last to make debugging
	  easier.

2003-04-19  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/commands.c: Implemented Undo/Redo for data shuffling.

	* src/commands.c: Implemented Undo/Redo for scenario->manager.

2003-04-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/sheet.c (sheet_move_range): Added a call to update scenarios.

	* src/commands.c: Implemented Undo/Redo for scenario->add.

2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/xml-io.c (xml_read_scenarios): Use global_range_parse
	instead of parse_range.

2003-04-15  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/xml-io.c (xml_read_scenarios): Wrote. Reads scenarios of a
	sheet.
	(xml_write_scenarios): Wrote. Stores scenarios of a sheet.
	(xml_node_set_value): Wrote.
	(xml_node_get_value): Wrote.
	(xml_sheet_write): Added a call to write scenarios.
	(xml_sheet_read): Added a call to read scenarios.
	
2003-04-12  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_graph_guru_done) : new.
	(cb_launch_graph_guru) : simplify the DataAllocator interface.
	  The whole edit_{begin/end} was needed for wbcg.  We can handle that
	  here directly without extending the interface.

2003-04-12  Jody Goldberg <jody@gnome.org>

	* icons/chart* : fix the background transparency.
	* *.c : Use g_type_class_peek_parent and tidy up upchaining a bit
	  to be more consistent across all classes.
