@@ -50,6 +50,7 @@ typedef struct {
 	gboolean	 live_scrolling;
 	gint		 recalc_lag;
 	gboolean	 unfocused_range_selection;
+	gboolean         prefer_clipboard_selection;  /* As opposed to "primary".  */
 } GnmAppPrefs;
 extern GnmAppPrefs const *gnm_app_prefs;
 
@@ -119,5 +120,6 @@ void     gnm_gconf_set_auto_complete (gboolean val);
 void     gnm_gconf_set_live_scrolling (gboolean val);
 void     gnm_gconf_set_recalc_lag (gint val);
 void     gnm_gconf_set_unfocused_range_selection (gboolean val);
+void     gnm_gconf_set_prefer_clipboard_selection (gboolean val);
 
 #endif /* GNUMERIC_GRAPH_H */
